Server: Refactor, use latest crate versions and write unit tests
